refactor startup.sh

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -14,6 +14,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Normalize line endings for startup script (Windows CRLF -> LF)
+RUN sed -i 's/\r$//' scripts/startup.sh
+
 # Create uploads directory
 RUN mkdir -p /app/uploads
 
@@ -24,4 +27,4 @@ RUN chmod +x scripts/startup.sh
 EXPOSE 8000
 
 # Run startup script and then start server
-CMD ["sh", "-c", "./scripts/startup.sh && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+CMD ["sh", "-c", "sh scripts/startup.sh && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
